--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -7,32 +7,32 @@
 
         <title>EXTRANET 2.0</title>
 
-        <link href="<?= $this->basePath() . '/css/bootstrap.min.css' ?>" rel="stylesheet">
-        <link href="<?= $this->basePath() . '/css/plugins/metisMenu/metisMenu.min.css' ?>" rel="stylesheet">
-        <link href="<?= $this->basePath() . '/css/sb-admin-2.css' ?>" rel="stylesheet">
-        <link href="<?= $this->basePath() . '/font-awesome/css/font-awesome.min.css' ?>" rel="stylesheet" type="text/css">
-        <link href="<?= $this->basePath() . '/css/fullcalendar.css' ?>" rel="stylesheet">
-        <link href="<?= $this->basePath() . '/css/datepicker.css' ?>" rel="stylesheet">
-        <link href="<?= $this->basePath() . '/css/fullcalendar.print.css' ?>" rel="stylesheet" media="print">
-        <link href="<?= $this->basePath() . '/css/custom.css' ?>" rel="stylesheet">
-        <link href="<?= $this->basePath() . '/css/jquery.timepicker.css' ?>" rel="stylesheet">
-        <script src="<?= $this->basePath() . '/js/jquery.js' ?>"></script>
-        <script src="<?= $this->basePath() . '/js/bootstrap.min.js' ?>"></script>
-        <script src="<?= $this->basePath() . '/js/plugins/metisMenu/metisMenu.min.js' ?>"></script>
-        <script src="<?= $this->basePath() . '/js/sb-admin-2.js' ?>"></script>
-        <script src="<?= $this->basePath() . '/js/moment.min.js' ?>"></script> 
-        <script src="<?= $this->basePath() . '/js/jquery-1.9.1.min.js' ?>"></script>
-        <script  src="<?= $this->basePath() . '/js/jquery-ui-1.10.2.custom.min.js' ?>"></script>
-        <script src="<?= $this->basePath() . '/js/jquery-ui.custom.min.js' ?>"></script>
-        <script  src="<?= $this->basePath() . '/js/jquery.timepicker.js' ?>"></script>
-        <script  src="<?= $this->basePath() . '/js/jquery.datepair.js' ?>"></script>
-        <script  src="<?= $this->basePath() . '/js/datepair.js' ?>"></script>
-        <script src="<?= $this->basePath() . '/js/jquery.min.js' ?>"></script>
-        <script  src="<?= $this->basePath() . '/js/bootstrap-datepicker.js' ?>"></script>
-        <script src="<?= $this->basePath() . '/js/fullcalendar.min.js' ?>"></script>
-        <script src="<?= $this->basePath() . '/js/pl.js' ?>"></script>       
+        <link href="<?= $this->basePath() . '/public/css/bootstrap.min.css' ?>" rel="stylesheet">
+        <link href="<?= $this->basePath() . '/public/css/plugins/metisMenu/metisMenu.min.css' ?>" rel="stylesheet">
+        <link href="<?= $this->basePath() . '/public/css/sb-admin-2.css' ?>" rel="stylesheet">
+        <link href="<?= $this->basePath() . '/public/font-awesome/css/font-awesome.min.css' ?>" rel="stylesheet" type="text/css">
+        <link href="<?= $this->basePath() . '/public/css/fullcalendar.css' ?>" rel="stylesheet">
+        <link href="<?= $this->basePath() . '/public/css/datepicker.css' ?>" rel="stylesheet">
+        <link href="<?= $this->basePath() . '/public/css/fullcalendar.print.css' ?>" rel="stylesheet" media="print">
+        <link href="<?= $this->basePath() . '/public/css/custom.css' ?>" rel="stylesheet">
+        <link href="<?= $this->basePath() . '/public/css/jquery.timepicker.css' ?>" rel="stylesheet">
+        <script src="<?= $this->basePath() . '/public/js/jquery.js' ?>"></script>
+        <script src="<?= $this->basePath() . '/public/js/bootstrap.min.js' ?>"></script>
+        <script src="<?= $this->basePath() . '/public/js/plugins/metisMenu/metisMenu.min.js' ?>"></script>
+        <script src="<?= $this->basePath() . '/public/js/sb-admin-2.js' ?>"></script>
+        <script src="<?= $this->basePath() . '/public/js/moment.min.js' ?>"></script> 
+        <script src="<?= $this->basePath() . '/public/js/jquery-1.9.1.min.js' ?>"></script>
+        <script  src="<?= $this->basePath() . '/public/js/jquery-ui-1.10.2.custom.min.js' ?>"></script>
+        <script src="<?= $this->basePath() . '/public/js/jquery-ui.custom.min.js' ?>"></script>
+        <script  src="<?= $this->basePath() . '/public/js/jquery.timepicker.js' ?>"></script>
+        <script  src="<?= $this->basePath() . '/public/js/jquery.datepair.js' ?>"></script>
+        <script  src="<?= $this->basePath() . '/public/js/datepair.js' ?>"></script>
+        <script src="<?= $this->basePath() . '/public/js/jquery.min.js' ?>"></script>
+        <script  src="<?= $this->basePath() . '/public/js/bootstrap-datepicker.js' ?>"></script>
+        <script src="<?= $this->basePath() . '/public/js/fullcalendar.min.js' ?>"></script>
+        <script src="<?= $this->basePath() . '/public/js/pl.js' ?>"></script>       
     </head>
-    <body>
+    <body> 
         <div id="wrapper">
             <nav class="navbar navbar-default navbar-static-top" role="navigation" id="up-nav" style="margin-bottom: 0">
                 <div class="navbar-header">
@@ -47,7 +47,14 @@
                         </li>
                     <li>
                         <a href='<?= $this->url('podglad', array()); ?>'><i class="fa fa-search"></i>  Podgląd sprawozdań</a>
-                    </li>                
+                    </li>   
+                    <li>
+                        <a href='<?= $this->url('kadra', array()); ?>'><i class="fa fa-search"></i>  Podgląd zespołów</a>
+                    </li> 
+                    <li>
+                        <a href='<?= $this->url('zawodnik', array()); ?>'><i class="fa fa-search"></i>  Podgląd zawodników</a>
+                    </li> 
+                    
                 </ul>
                 <ul class="nav navbar-top-links navbar-right">
                     <li class="dropdown">
@@ -56,7 +63,7 @@
                             <i class="fa fa-user fa-fw"></i> <?= $_SESSION['name']; ?> <i class="fa fa-caret-down"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                           
+                           <!-- <li><a href="<?= $this->url('zmianahasla'); ?>"><i class="fa fa-pencil fa-fw"></i> Zmień hasło</a>-->
                             <li><a href="<?= $this->url('logout'); ?>"><i class="fa fa-sign-out fa-fw"></i> Wyloguj</a>
                             </li>
                         </ul>
