dodawanie danych na temat meczu

--- a/module/Zawodnik/view/zawodnik/zawodnik/dodaj.phtml
+++ b/module/Zawodnik/view/zawodnik/zawodnik/dodaj.phtml
@@ -17,6 +17,14 @@
     </div>
  
 
+    <div class="form-group">
+        <label>Klub:</label>
+        <select name="Klub" class="form-control">
+                    <?php foreach ($this->kluby as $klub) { ?>
+                    <option value="<?= $klub->id_zespol ?>"><?= $klub->nazwa_zespolu ?></option>
+                    <?php } ?>
+                </select>
+    </div>
 
                 <a href="<?= $this->url('zawodnik',array()); ?>"><input class="btn btn-default" type="button" value="Wstecz" />
                 <a href="<?= $this->url('zawodnik',array()); ?>"><button type="submit" class="btn btn-default">Zatwierdź</button></a>
