--- a/module/Application/view/layout/home.phtml
+++ b/module/Application/view/layout/home.phtml
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
         <link rel="stylesheet" href="http://bootsnipp.com/dist/bootsnipp.min.css?ver=7d23ff901039aef6293954d33d23c066">
-    <style>
-
+    <style> 
+ 
 .panel-login {
 	border-color: #ccc;
 	-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
@@ -193,6 +193,20 @@
                                                                         <div class="form-group">
 										<input type="text" name="Imie" id="username" tabindex="1" class="form-control" placeholder="Imie" value="">
 									</div>
+          
+                                                                    <div class="form-group"> 
+                                                                        <label>Funkcja:</label><br>
+                                                                        <input onclick="document.getElementById('klub').disabled = false;" type="radio" name="Funkcja" value="dzialacz" checked > Działacz sportowy<br>
+                                                                        <input onclick="document.getElementById('klub').disabled = true;" type="radio" name="Funkcja" value="sedzia" > Sędzia piłkarski<br>
+                                                                    </div>
+                                                                        <div class="form-group">
+                                                                        <select name= "Id_zespol" id="klub" class="form-control" placeholder="Klub">
+                                                                         <option value="" disabled selected>Wybierz klub</option>
+                                                                         <?php foreach ($this->kluby as $klub) { ?>
+                                                                         <option value="<?= $klub->id_zespol ?>"><?= $klub->nazwa_zespolu ?></option>
+                                                                          <?php } ?>
+                                                                           </select>
+                                                                    </div>                                                            
 									<div class="form-group">
 										<input type="email" name="Email" id="email" tabindex="1" class="form-control" placeholder="Email" value="">
 									</div>
