--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="Content-type" content="text/html; charset=iso-8859-2">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+ 
         <title>EXTRANET 2.0</title>
 
         <link href="<?= $this->basePath() . '/public/css/bootstrap.min.css' ?>" rel="stylesheet">
@@ -15,6 +15,7 @@
         <link href="<?= $this->basePath() . '/public/css/datepicker.css' ?>" rel="stylesheet">
         <link href="<?= $this->basePath() . '/public/css/fullcalendar.print.css' ?>" rel="stylesheet" media="print">
         <link href="<?= $this->basePath() . '/public/css/custom.css' ?>" rel="stylesheet">
+        <link href="<?= $this->basePath() . '/public/css/jquery.timepicker.min.css' ?>" rel="stylesheet">
         <link href="<?= $this->basePath() . '/public/css/jquery.timepicker.css' ?>" rel="stylesheet">
         <script src="<?= $this->basePath() . '/public/js/jquery.js' ?>"></script>
         <script src="<?= $this->basePath() . '/public/js/bootstrap.min.js' ?>"></script>
@@ -25,6 +26,7 @@
         <script  src="<?= $this->basePath() . '/public/js/jquery-ui-1.10.2.custom.min.js' ?>"></script>
         <script src="<?= $this->basePath() . '/public/js/jquery-ui.custom.min.js' ?>"></script>
         <script  src="<?= $this->basePath() . '/public/js/jquery.timepicker.js' ?>"></script>
+        <script  src="<?= $this->basePath() . '/public/js/jquery.timepicker.min.js' ?>"></script>
         <script  src="<?= $this->basePath() . '/public/js/jquery.datepair.js' ?>"></script>
         <script  src="<?= $this->basePath() . '/public/js/datepair.js' ?>"></script>
         <script src="<?= $this->basePath() . '/public/js/jquery.min.js' ?>"></script>
@@ -36,31 +38,57 @@
         <div id="wrapper">
             <nav class="navbar navbar-default navbar-static-top" role="navigation" id="up-nav" style="margin-bottom: 0">
                 <div class="navbar-header">
+                    <p align="center" ></p>
                     <a class="navbar-brand">EXTRANET 2.0</a>
                 </div>
                 <ul class="nav navbar-top-links navbar-left">
+                    <?php if ($_SESSION['funkcja'] == 'admin') : ?>
+                    <p align="center" ></p>
                         <li>
-                            <a href='<?= $this->url('zarzadzanie', array()); ?>'><i class="fa fa-futbol-o"></i>  Zarządzanie meczami</a>
+                            <a href='<?= $this->url('mecz', array()); ?>'><i class="fa fa-futbol-o"></i>  Zarządzanie meczami</a>
                         </li>   
+                    <li>
+                        <a href='<?= $this->url('podglad', array()); ?>'><i class="fa fa-search"></i>  Podgląd sprawozdań</a>
+                    </li>   
+                    <li>
+                        <a href='<?= $this->url('kadra', array()); ?>'><i class="fa fa-trophy"></i>  Lista zespołów</a>
+                    </li> 
+                    <li>
+                        <a href='<?= $this->url('zawodnik', array()); ?>'><i class="fa fa-user"></i>  Lista zawodników</a>
+                    </li> 
+                    <li>
+                        <a href='<?= $this->url('sedzia', array()); ?>'><i class="fa fa-user"></i>  Lista sędziów</a>
+                    </li> 
+                
+                    <?php endif ?>
+                     
+                    <?php if ($_SESSION['funkcja'] == 'sedzia') : ?> 
+                    <p align="center" ></p>
                         <li>
                             <a href='<?= $this->url('sprawozdanie', array()); ?>'><i class="fa fa-pencil"></i>  Tworzenie sprawozdań</a>
                         </li>
                     <li>
                         <a href='<?= $this->url('podglad', array()); ?>'><i class="fa fa-search"></i>  Podgląd sprawozdań</a>
                     </li>   
-                    <li>
-                        <a href='<?= $this->url('kadra', array()); ?>'><i class="fa fa-search"></i>  Podgląd zespołów</a>
-                    </li> 
+
+                    <?php endif ?>
+                    
+                    <?php if ($_SESSION['funkcja'] == 'dzialacz') : ?> 
+                    <p align="center" ></p>
+                    <li>       
+                        <a href='<?= $this->url('podglad', array()); ?>'><i class="fa fa-search"></i>  Podgląd sprawozdań</a>
+                    </li>   
                     <li>
                         <a href='<?= $this->url('zawodnik', array()); ?>'><i class="fa fa-search"></i>  Podgląd zawodników</a>
                     </li> 
+                    <?php endif ?>
                     
                 </ul>
                 <ul class="nav navbar-top-links navbar-right">
                     <li class="dropdown">
 
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">
-                            <i class="fa fa-user fa-fw"></i> <?= $_SESSION['name']; ?> <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-user fa-fw"></i> <?= $_SESSION['name']; ?> <br><p align="center"><?= $_SESSION['funkcja']; echo(" ")?><i class="fa fa-caret-down"></p></i>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
                            <!-- <li><a href="<?= $this->url('zmianahasla'); ?>"><i class="fa fa-pencil fa-fw"></i> Zmień hasło</a>-->
