--- a/module/Zawodnik/view/zawodnik/zawodnik/edytuj.phtml
+++ b/module/Zawodnik/view/zawodnik/zawodnik/edytuj.phtml
@@ -15,6 +15,15 @@
         <label>Data urodzenia:</label>
                 <input name="Data_ur" type="text" id="date" class="span1" value="<?= $zawodnik->z_data_ur; ?>" readonly required>
     </div>
+        
+    <div class="form-group">
+        <label>Klub:</label>
+        <select name="Klub" class="form-control">
+                    <?php foreach ($kluby as $klub) { ?>
+                    <option value="<?= $klub->id_zespol ?>" <?php if ($klub->id_zespol == $zawodnik->id_zespol) { echo 'selected'; }?>><?= $klub->nazwa_zespolu ?></option>
+                    <?php } ?>
+                </select>
+    </div>
            
 <a href="<?= $this->url('zawodnik',array()); ?>"><input class="btn btn-default" type="button" value="Wstecz" />
         <button type="submit" class="btn btn-default">Zatwierdź</button>
