--- a/module/Zawodnik/view/zawodnik/zawodnik/lista.phtml
+++ b/module/Zawodnik/view/zawodnik/zawodnik/lista.phtml
@@ -1,5 +1,9 @@
-
+<?php if ($_SESSION['funkcja'] != 'dzialacz') : ?> 
 <h1 class="page-header">Lista zawodników:</h1>
+<?php endif ?>
+<?php if ($_SESSION['funkcja'] == 'dzialacz') : ?> 
+<h1 class="page-header">Lista zawodników twojego zespołu:</h1>
+<?php endif ?>
 <div class="col-lg-12">
     <div class="table-responsive">
         <table class="table table-bordered table-striped table-hover">
@@ -9,7 +13,9 @@
             <th>Nazwisko</th>
             <th>Data urodzenia</th>
             <th>Klub</th>
+            <?php if ($_SESSION['funkcja'] != 'dzialacz') : ?> 
             <th>Zaznacz</th>
+            <?php endif ?>
         </tr>
             </thead>
             <?php foreach ($zawodnicy as $zawodnik) : ?>
@@ -17,9 +23,10 @@
     <td><?= $this->escapeHtml($zawodnik->z_imie) ?></td>
     <td><?= $this->escapeHtml($zawodnik->z_nazwisko) ?></td>
     <td><?= $this->escapeHtml($zawodnik->z_data_ur) ?></td>
-    <td><?= $this->escapeHtml($zawodnik->id_zespol) ?></td>
+    <td> <?= $this->escapeHtml($zawodnik->id_zespol) ?></td>
+    <?php if ($_SESSION['funkcja'] != 'dzialacz') : ?> 
      <td><input type="radio" value="<?= $this->escapeHtml($zawodnik->id_zawodnik) ?>" name="choice" /></td>
-
+<?php endif ?>
     </tr>
 
 <?php endforeach; ?>
@@ -33,13 +40,11 @@
 
 <br/>
 <br/>
-
+<?php if ($_SESSION['funkcja'] != 'dzialacz') : ?> 
 <a href="<?= $this->url('zawodnik',array('action'=>'dodaj')) ?>"><button class="btn btn-default">Nowy</button></a>&nbsp;&nbsp;
 <a id="adresEdytuj" href="<?= $this->url('zawodnik',array('action'=>'edytuj')); ?>"><button class="btn btn-default">Edytuj</button></a>&nbsp;&nbsp;
-
-
 <a id="adresUsun" href="<?= $this->url('zawodnik',array('action'=>'usun')); ?>"><button class="btn btn-default" onclick="return confirm('Czy chcesz usunąć tego zawodnika?')">Usuń</button></a>&nbsp;&nbsp;
-
+<?php endif ?>
 <br/>
 <br/>
    
